[gd_scene load_steps=7 format=3 uid="uid://dr0582hkwyhvd"]

[ext_resource type="FontFile" uid="uid://cq1tsomxbci4y" path="res://assets/fonts/Jaro-Regular-VariableFont_opsz.ttf" id="1_refmx"]
[ext_resource type="Script" path="res://scripts/Settings.gd" id="2_2dvs8"]

[sub_resource type="Theme" id="Theme_8oja8"]
default_font = ExtResource("1_refmx")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5wf11"]
bg_color = Color(0.364706, 0, 0.870588, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.694118, 0.47451, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.690833, 0.47, 1, 0.219608)
shadow_size = 26

[sub_resource type="Theme" id="Theme_g6tka"]
CheckButton/constants/icon_max_width = 64
CheckButton/font_sizes/font_size = 23

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uoaxi"]
content_margin_top = 7.0
content_margin_bottom = 7.0
bg_color = Color(1, 0.584314, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8oja8")
script = ExtResource("2_2dvs8")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -191.0
offset_right = 73.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_styles/panel = SubResource("StyleBoxFlat_5wf11")

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer2"]
layout_mode = 2
theme = SubResource("Theme_g6tka")

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "CLOSE"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="MusicCheckButton" type="CheckButton" parent="PanelContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Music"

[node name="SFXCheckButton" type="CheckButton" parent="PanelContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "SFX (Sound Effects)"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="SignOutButton" type="Button" parent="PanelContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_uoaxi")
text = "Sign out"

[connection signal="pressed" from="PanelContainer/MarginContainer2/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
